Enable lib/ftdi in Travis for OSX

--- a/lib/ftdi/meta.yaml
+++ b/lib/ftdi/meta.yaml
@@ -44,8 +44,8 @@ requirements:
     - {{ pin_compatible('libusb', min_pin='x.x', max_pin='x.x') }}
   run:
     - {{ compiler('c') }}
-    - libgcc-ng [not win]
-    - libstdcxx-ng [not win]
+    - libgcc-ng    [linux]
+    - libstdcxx-ng [linux]
     - libusb
     - py-boost
     - python
