Add libftdi to windows builds

--- a/lib/ftdi/meta.yaml
+++ b/lib/ftdi/meta.yaml
@@ -21,8 +21,10 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}
-    - {{ compiler('cxx') }}
+    - boost=1.67
+    - python
+    - {{ compiler('c') }}   [not win]
+    - {{ compiler('cxx') }} [not win]
     - cmake
     - libusb
     - boost {{ boost_version }}
@@ -32,7 +34,8 @@ requirements:
     - python
   host:
     - cmake
-    - pkg-config
+    - boost=1.67
+    - pkg-config [not win]
     - swig
     # cmake 1.15 required for boost 1.71
     - {{ pin_compatible('boost', min_pin='x.x', max_pin='x.x') }}
@@ -40,8 +43,10 @@ requirements:
     - {{ pin_compatible('libboost', min_pin='x.x', max_pin='x.x') }}
     - {{ pin_compatible('libusb', min_pin='x.x', max_pin='x.x') }}
   run:
-    - libgcc-ng
-    - libstdcxx-ng
+    - {{ compiler('c') }}
+    - libgcc-ng [not win]
+    - libstdcxx-ng [not win]
+    - libusb
     - py-boost
     - python
     - {{ pin_compatible('libboost', min_pin='x.x', max_pin='x.x') }}
