--- a/lib/ftdi/meta.yaml
+++ b/lib/ftdi/meta.yaml
@@ -1,3 +1,6 @@
+# cmake 1.15 required for boost 1.71
+{% set boost_version = ">=1.67,<1.68.0a0" %}
+
 package:
   name: libftdi
   version: 1.3
@@ -18,21 +21,31 @@ build:
 
 requirements:
   build:
-    - boost
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    - cmake
     - libusb
+    - boost {{ boost_version }}
+    - boost-cpp {{ boost_version }}
+    - libboost {{ boost_version }}
+    - py-boost {{ boost_version }}
+    - python
   host:
-    - cmake # [linux]
-    - boost
+    - cmake
     - pkg-config
     - swig
+    # cmake 1.15 required for boost 1.71
+    - {{ pin_compatible('boost', min_pin='x.x', max_pin='x.x') }}
+    - {{ pin_compatible('boost-cpp', min_pin='x.x', max_pin='x.x') }}
+    - {{ pin_compatible('libboost', min_pin='x.x', max_pin='x.x') }}
+    - {{ pin_compatible('libusb', min_pin='x.x', max_pin='x.x') }}
   run:
-    - {{ compiler('c') }}
     - libgcc-ng
     - libstdcxx-ng
-    - libusb
+    - py-boost
     - python
+    - {{ pin_compatible('libboost', min_pin='x.x', max_pin='x.x') }}
+    - {{ pin_compatible('libusb', min_pin='x.x', max_pin='x.x') }}
 
 about:
   home: https://www.intra2net.com/en/developer/libftdi/
