--- a/prog/icefunprog/meta.yaml
+++ b/prog/icefunprog/meta.yaml
@@ -1,4 +1,8 @@
-{% set version = '%s_%04i_%s'|format(GIT_DESCRIBE_TAG or 'v0.X', GIT_DESCRIBE_NUMBER|int, GIT_DESCRIBE_HASH or 'gUNKNOWN') %}
+{% set version = '%s_%04i_%s'|format(
+    environ.get('GIT_DESCRIBE_TAG', 'v0.X'),
+    environ.get('GIT_DESCRIBE_NUMBER', '0')|int,
+    environ.get('GIT_DESCRIBE_HASH', 'gUNKNOWN')
+    ) %}
 
 package:
   name: icefunprog
