--- a/prog/iceprog/meta.yaml
+++ b/prog/iceprog/meta.yaml
@@ -24,11 +24,11 @@ requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-    - pkg-config [not win]
-    - msys2:m2w64-toolchain [win]
-    - msys:m2-base      [win]
-    - msys2:m2-make              [win]
-    - vs2017_win-64     [win]
+    - pkg-config      [not win]
+    - m2w64-toolchain [win]
+    - m2-base         [win]
+    - m2-make         [win]
+    - vs2017_win-64   [win]
     - libftdi
     - libusb
   host:
