Do not run install phase on maintanance jobs

--- a/.travis.yml
+++ b/.travis.yml
@@ -126,6 +126,7 @@ jobs:
    - stage: "Main label upload"
      os: linux
      dist: xenial
+     install: skip
      script:
        - bash $TRAVIS_BUILD_DIR/.travis/master-package.sh
 
@@ -133,6 +134,7 @@ jobs:
    - stage: "Cleanup"
      os: linux
      dist: xenial
+     install: skip
      script:
        - bash $TRAVIS_BUILD_DIR/.travis/cleanup-anaconda.sh
 
