--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "litex-conda-ci"]
-	path = .travis
-	url = https://github.com/litex-hub/litex-conda-ci.git
+	path = .github/scripts
+	url = https://github.com/antmicro/litex-conda-ci.git
+	branch = move-to-ghactions
