--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -1,70 +1,226 @@
 name: build-packages
 on: [push, pull_request]
+env:
+  ANACONDA_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
+  ANACONDA_USER: ${{ secrets.ANACONDA_USER }}
+defaults:
+  run:
+    shell: bash
 jobs:
-  packages:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - {package: "lib/usb", os: "ubuntu-16.04", os-name: "linux"}
-          - {package: "lib/xml2", os: "ubuntu-16.04", os-name: "linux"}
-          - {package: "prog/icefunprog", os: "ubuntu-16.04", os-name: "linux"}
-          - {package: "prog/flterm", os: "ubuntu-16.04", os-name: "linux"}
-          - {package: "lib/ftdi", os: "ubuntu-16.04", os-name: "linux"}
-          - {package: "prog/fxload", os: "ubuntu-16.04", os-name: "linux"}
-          - {package: "prog/dfu-util", os: "ubuntu-16.04", os-name: "linux"}
-          - {package: "prog/iceprog", os: "ubuntu-16.04", os-name: "linux"}
-          - {package: "prog/openocd", os: "ubuntu-16.04", os-name: "linux"}
-
-          - {package: "lib/usb", os: "macos-latest", os-name: "osx"}
-          - {package: "lib/xml2", os: "macos-latest", os-name: "osx"}
-          - {package: "prog/icefunprog", os: "macos-latest", os-name: "osx"}
-          - {package: "prog/flterm", os: "macos-latest", os-name: "osx"}
-          - {package: "lib/ftdi", os: "macos-latest", os-name: "osx"}
-          - {package: "prog/dfu-util", os: "macos-latest", os-name: "osx"}
-          - {package: "prog/iceprog", os: "macos-latest", os-name: "osx"}
-          - {package: "prog/openocd", os: "macos-latest", os-name: "osx"}
-
-          - {package: "lib/usb", os: "windows-latest", os-name: "windows"}
-          - {package: "lib/ftdi", os: "windows-latest", os-name: "windows"}
-          - {package: "prog/iceprog", os: "windows-latest", os-name: "windows"}
-    defaults:
-      run:
-        shell: bash
+  libusb-linux:
+    runs-on: "ubuntu-16.04"
+    env:
+      PACKAGE: "lib/usb"
+      OS_NAME: "linux"
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: 'true'
-    - name: 'windows: add msys2 to PATH'
-      if: matrix.os-name == 'windows'
-      run: echo "C:\msys64" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-      shell: powershell
-    - name: 'macos: install dependencies'
-      if: matrix.os-name == 'osx'
-      run: brew install coreutils autoconf automake libtool
-    - name: build
-      env:
-        PACKAGE: ${{ matrix.package }}
-        OS_NAME: ${{ matrix.os-name }}
-      run: |
-        export PATH="$PATH:/c/ProgramData/Chocolatey/bin/"
-        export PATH="$PATH:/c/Program Files/Git/usr/bin/"
-        source .github/scripts/common.sh
-        bash .github/scripts/fixup-git.sh
-        bash .github/scripts/download_sdk.sh
-        source .github/scripts/common.sh
-        bash .github/scripts/install.sh
-        bash .github/scripts/script.sh
-    - name: on_success
-      env:
-        PACKAGE: ${{ matrix.package }}
-      if: success()
-      run: |
-        source .github/scripts/after_success.sh
-    - name: on_failure
-      env:
-        PACKAGE: ${{ matrix.package }}
-      if: failure()
-      run: |
-        source .github/scripts/after_failure.sh
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  libxml2-linux:
+    runs-on: "ubuntu-16.04"
+    env:
+      PACKAGE: "lib/xml2"
+      OS_NAME: "linux"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  icefunprog-linux:
+    runs-on: "ubuntu-16.04"
+    env:
+      PACKAGE: "prog/icefunprog"
+      OS_NAME: "linux"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  flterm-linux:
+    runs-on: "ubuntu-16.04"
+    env:
+      PACKAGE: "prog/flterm"
+      OS_NAME: "linux"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  libftdi-linux:
+    runs-on: "ubuntu-16.04"
+    env:
+      PACKAGE: "lib/ftdi"
+      OS_NAME: "linux"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  fxload-linux:
+    runs-on: "ubuntu-16.04"
+    env:
+      PACKAGE: "prog/fxload"
+      OS_NAME: "linux"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  dfu-util-linux:
+    runs-on: "ubuntu-16.04"
+    env:
+      PACKAGE: "prog/dfu-util"
+      OS_NAME: "linux"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  iceprog-linux:
+    runs-on: "ubuntu-16.04"
+    env:
+      PACKAGE: "prog/iceprog"
+      OS_NAME: "linux"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  openocd-linux:
+    runs-on: "ubuntu-16.04"
+    env:
+      PACKAGE: "prog/iceprog"
+      OS_NAME: "linux"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  libusb-osx:
+    runs-on: "macos-latest"
+    env:
+      PACKAGE: "lib/usb"
+      OS_NAME: "osx"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  libxml2-osx:
+    runs-on: "macos-latest"
+    env:
+      PACKAGE: "lib/xml2"
+      OS_NAME: "osx"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  icefunprog-osx:
+    runs-on: "macos-latest"
+    env:
+      PACKAGE: "prog/icefunprog"
+      OS_NAME: "osx"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  flterm-osx:
+    runs-on: "macos-latest"
+    env:
+      PACKAGE: "prog/flterm"
+      OS_NAME: "osx"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  libftdi-osx:
+    runs-on: "macos-latest"
+    env:
+      PACKAGE: "lib/ftdi"
+      OS_NAME: "osx"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  dfu-util-osx:
+    runs-on: "macos-latest"
+    env:
+      PACKAGE: "prog/dfu-util"
+      OS_NAME: "osx"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - run: brew install coreutils autoconf automake libtool
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  iceprog-osx:
+    runs-on: "macos-latest"
+    env:
+      PACKAGE: "prog/iceprog"
+      OS_NAME: "osx"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  openocd-osx:
+    runs-on: "macos-latest"
+    env:
+      PACKAGE: "prog/openocd"
+      OS_NAME: "osx"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - run: brew install coreutils autoconf automake libtool
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  libusb-windows:
+    runs-on: "windows-latest"
+    env:
+      PACKAGE: "lib/usb"
+      OS_NAME: "windows"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  libftdi-windows:
+    runs-on: "windows-latest"
+    env:
+      PACKAGE: "lib/ftdi"
+      OS_NAME: "windows"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  iceprog-windows:
+    runs-on: "windows-latest"
+    env:
+      PACKAGE: "prog/iceprog"
+      OS_NAME: "windows"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: antmicro/litex-conda-ci@move-to-ghactions
+  master-package:
+    runs-on: "ubuntu-16.04"
+    env:
+      OS_NAME: "linux"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: actions/setup-python@v1
+      - uses: BSFishy/pip-action@v1
+        with:
+          packages: urllib3
+      - run: |
+          bash .github/scripts/install.sh
+          python .github/scripts/wait-for-statuses.py
