--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -31,7 +31,7 @@ jobs:
   icefunprog-linux:
     runs-on: "ubuntu-16.04"
     env:
-      PACKAGE: "prog/icefunprog"
+      PACKAGE: "tools/icefunprog"
       OS_NAME: "linux"
     steps:
       - uses: actions/checkout@v2
@@ -41,7 +41,7 @@ jobs:
   flterm-linux:
     runs-on: "ubuntu-16.04"
     env:
-      PACKAGE: "prog/flterm"
+      PACKAGE: "tools/flterm"
       OS_NAME: "linux"
     steps:
       - uses: actions/checkout@v2
@@ -63,7 +63,7 @@ jobs:
     runs-on: "ubuntu-16.04"
     needs: "libusb-linux"
     env:
-      PACKAGE: "prog/fxload"
+      PACKAGE: "tools/fxload"
       OS_NAME: "linux"
     steps:
       - uses: actions/checkout@v2
@@ -74,7 +74,7 @@ jobs:
     runs-on: "ubuntu-16.04"
     needs: "libusb-linux"
     env:
-      PACKAGE: "prog/dfu-util"
+      PACKAGE: "tools/dfu-util"
       OS_NAME: "linux"
     steps:
       - uses: actions/checkout@v2
@@ -85,7 +85,7 @@ jobs:
     runs-on: "ubuntu-16.04"
     needs: ["libusb-linux", "libftdi-linux"]
     env:
-      PACKAGE: "prog/iceprog"
+      PACKAGE: "tools/iceprog"
       OS_NAME: "linux"
     steps:
       - uses: actions/checkout@v2
@@ -96,7 +96,7 @@ jobs:
     runs-on: "ubuntu-16.04"
     needs: ["libusb-linux", "libftdi-linux"]
     env:
-      PACKAGE: "prog/iceprog"
+      PACKAGE: "tools/iceprog"
       OS_NAME: "linux"
     steps:
       - uses: actions/checkout@v2
@@ -126,7 +126,7 @@ jobs:
   icefunprog-osx:
     runs-on: "macos-latest"
     env:
-      PACKAGE: "prog/icefunprog"
+      PACKAGE: "tools/icefunprog"
       OS_NAME: "osx"
     steps:
       - uses: actions/checkout@v2
@@ -136,7 +136,7 @@ jobs:
   flterm-osx:
     runs-on: "macos-latest"
     env:
-      PACKAGE: "prog/flterm"
+      PACKAGE: "tools/flterm"
       OS_NAME: "osx"
     steps:
       - uses: actions/checkout@v2
@@ -158,7 +158,7 @@ jobs:
     runs-on: "macos-latest"
     needs: "libusb-osx"
     env:
-      PACKAGE: "prog/dfu-util"
+      PACKAGE: "tools/dfu-util"
       OS_NAME: "osx"
     steps:
       - uses: actions/checkout@v2
@@ -170,7 +170,7 @@ jobs:
     runs-on: "macos-latest"
     needs: ["libusb-osx", "libftdi-osx"]
     env:
-      PACKAGE: "prog/iceprog"
+      PACKAGE: "tools/iceprog"
       OS_NAME: "osx"
     steps:
       - uses: actions/checkout@v2
@@ -181,7 +181,7 @@ jobs:
     runs-on: "macos-latest"
     needs: ["libusb-osx", "libftdi-osx"]
     env:
-      PACKAGE: "prog/openocd"
+      PACKAGE: "tools/openocd"
       OS_NAME: "osx"
     steps:
       - uses: actions/checkout@v2
@@ -214,7 +214,7 @@ jobs:
     runs-on: "windows-latest"
     needs: ["libusb-windows", "libftdi-windows"]
     env:
-      PACKAGE: "prog/iceprog"
+      PACKAGE: "tools/iceprog"
       OS_NAME: "windows"
     steps:
       - uses: actions/checkout@v2
