Fix recipes to only use Conda-based tools
The changes turned out to be enough to dump installing additional
packages through `brew` for `openocd` package on macOS.

--- a/lib/ftdi/meta.yaml
+++ b/lib/ftdi/meta.yaml
@@ -24,6 +24,7 @@ requirements:
     - python
     - {{ compiler('c') }}   [not win]
     - {{ compiler('cxx') }} [not win]
+    - make                  [not win]
     - pkg-config            [not win]
     - cmake
   host:
