--- a/lib/usb/meta.yaml
+++ b/lib/usb/meta.yaml
@@ -24,6 +24,7 @@ requirements:
     - {{ compiler('c') }}
     - automake  [not win]
     - autoconf  [not win]
+    - make      [not win]
   host:
     - pkg-config [not win]
 
