--- a/tools/openocd/meta.yaml
+++ b/tools/openocd/meta.yaml
@@ -30,6 +30,9 @@ requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    - automake
+    - libtool
+    - make
     - pkg-config
   host:
     - libftdi
