--- a/tools/icefunprog/meta.yaml
+++ b/tools/icefunprog/meta.yaml
@@ -25,6 +25,7 @@ requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    - make
     - pkg-config
   host: []
   run: []
