dfu-util: Add missing pandoc
`pandoc` is called by Makefile if files used to create manual page
change.

--- a/tools/dfu-util/meta.yaml
+++ b/tools/dfu-util/meta.yaml
@@ -25,6 +25,7 @@ requirements:
     - autoconf    [linux]
     - automake    [linux]
     - make        [linux]
+    - pandoc
     - pkg-config
   host:
     - libusb
