--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "litex-conda-ci"]
+[submodule "conda-ci"]
 	path = .github/scripts
-	url = https://github.com/litex-hub/litex-conda-ci.git
+	url = https://github.com/hdl/conda-ci.git
 	branch = master
