--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #2
   libxml2-linux:
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #3
   icefunprog-linux:
@@ -50,7 +50,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #4
   flterm-linux:
@@ -62,7 +62,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #5
   libftdi-linux:
@@ -75,7 +75,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #6
   fxload-linux:
@@ -88,7 +88,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #7
   dfu-util-linux:
@@ -101,7 +101,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #8
   iceprog-linux:
@@ -114,7 +114,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #9
   openocd-linux:
@@ -127,7 +127,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #10
   libusb-osx:
@@ -139,7 +139,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #11
   libxml2-osx:
@@ -151,7 +151,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #12
   icefunprog-osx:
@@ -163,7 +163,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #13
   flterm-osx:
@@ -175,7 +175,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #14
   libftdi-osx:
@@ -188,7 +188,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #15
   dfu-util-osx:
@@ -202,7 +202,7 @@ jobs:
         with:
           submodules: 'true'
       - run: brew install coreutils autoconf automake libtool
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #16
   iceprog-osx:
@@ -215,7 +215,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #17
   openocd-osx:
@@ -228,7 +228,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #18
   libusb-windows:
@@ -240,7 +240,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #19
   libftdi-windows:
@@ -253,7 +253,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   #20
   iceprog-windows:
@@ -266,7 +266,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: litex-hub/litex-conda-ci@master
+      - uses: hdl/conda-ci@master
 
   master-package:
     runs-on: "ubuntu-16.04"
