--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -13,6 +13,8 @@ on:
       - '.github/workflows/tuttest.yml'
       - 'README.md'
   workflow_dispatch:
+  schedule:
+    - cron: '0 1 * * *' # run daily at 1:00am (UTC)
 env:
   ANACONDA_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
   ANACONDA_USER: ${{ secrets.ANACONDA_USER }}
