openfgpaloader: test the build
Signed-off-by: Paweł Czarnecki <pczarnecki@antmicro.com>

--- a/tools/openfpgaloader/meta.yaml
+++ b/tools/openfpgaloader/meta.yaml
@@ -45,6 +45,10 @@ requirements:
     - libusb
     - libhidapi
 
+test:
+  commands:
+    - openFPGALoader -V
+
 about:
   home: https://github.com/trabucayre/openFPGALoader
   license_file: LICENSE
