Add Windows and macOS jobs for libhidapi

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -18,7 +18,7 @@ on:
 env:
   ANACONDA_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
   ANACONDA_USER: ${{ secrets.ANACONDA_USER }}
-  NUM_OF_JOBS: 21
+  NUM_OF_JOBS: 23
 defaults:
   run:
     shell: bash
@@ -163,6 +163,19 @@ jobs:
       - uses: hdl/conda-ci@master
 
   #12
+  libhidapi-osx:
+    runs-on: "macos-latest"
+    needs: "libusb-osx"
+    env:
+      PACKAGE: "lib/hidapi"
+      OS_NAME: "osx"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: hdl/conda-ci@master
+
+  #13
   libxml2-osx:
     runs-on: "macos-latest"
     env:
@@ -174,7 +187,7 @@ jobs:
           submodules: 'true'
       - uses: hdl/conda-ci@master
 
-  #13
+  #14
   icefunprog-osx:
     runs-on: "macos-latest"
     env:
@@ -186,7 +199,7 @@ jobs:
           submodules: 'true'
       - uses: hdl/conda-ci@master
 
-  #14
+  #15
   flterm-osx:
     runs-on: "macos-latest"
     env:
@@ -198,7 +211,7 @@ jobs:
           submodules: 'true'
       - uses: hdl/conda-ci@master
 
-  #15
+  #16
   libftdi-osx:
     runs-on: "macos-latest"
     needs: "libusb-osx"
@@ -211,7 +224,7 @@ jobs:
           submodules: 'true'
       - uses: hdl/conda-ci@master
 
-  #16
+  #17
   dfu-util-osx:
     runs-on: "macos-latest"
     needs: "libusb-osx"
@@ -225,7 +238,7 @@ jobs:
       - run: brew install coreutils autoconf automake libtool
       - uses: hdl/conda-ci@master
 
-  #17
+  #18
   iceprog-osx:
     runs-on: "macos-latest"
     needs: ["libusb-osx", "libftdi-osx"]
@@ -238,7 +251,7 @@ jobs:
           submodules: 'true'
       - uses: hdl/conda-ci@master
 
-  #18
+  #19
   openocd-osx:
     runs-on: "macos-latest"
     needs: ["libusb-osx", "libftdi-osx"]
@@ -251,7 +264,7 @@ jobs:
           submodules: 'true'
       - uses: hdl/conda-ci@master
 
-  #19
+  #20
   libusb-windows:
     runs-on: "windows-latest"
     env:
@@ -263,7 +276,20 @@ jobs:
           submodules: 'true'
       - uses: hdl/conda-ci@master
 
-  #20
+  #21
+  libhidapi-windows:
+    runs-on: "windows-latest"
+    needs: "libusb-windows"
+    env:
+      PACKAGE: "lib/hidapi"
+      OS_NAME: "windows"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      - uses: hdl/conda-ci@master
+
+  #22
   libftdi-windows:
     runs-on: "windows-latest"
     needs: "libusb-windows"
@@ -276,7 +302,7 @@ jobs:
           submodules: 'true'
       - uses: hdl/conda-ci@master
 
-  #21
+  #23
   iceprog-windows:
     runs-on: "windows-latest"
     needs: ["libusb-windows", "libftdi-windows"]
